// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      disabled={true}
      placeholder=" "
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      disabled={true}
      placeholder=" "
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo foaEFs"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo fZOEPn"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo bEGoiJ"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder=" "
      readOnly={true}
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder=" "
      readOnly={true}
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      dir="rtl"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      dir="rtl"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-fduepK gfcqQs"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo dqpabq"
      placeholder="medium"
      type="tel"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="large"
      type="tel"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo hboaBK"
        placeholder="xlarge"
        type="tel"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo eefKuh"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo fzqtXe"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV libhLy"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
